2010-09-04  Ivan Maidanski <ivmai@mail.ru>

	* darwin_stop_world.c (GC_push_all_stacks): Reset
	thread_state_count value before every thread_get_state call;
	refine the comment for thread_state_count.
	* darwin_stop_world.c (GC_push_all_stacks): Ignore rsp, rip/eip,
	rflags, cs, fs, gs, ss, ds, es, __pc registers; uncomment ebp
	register pushing.
	* darwin_stop_world.c (GC_push_all_stacks): Set outCount to
	GC_MACH_THREAD_STATE_COUNT (instead of THREAD_STATE_MAX).
	* darwin_stop_world.c (GC_push_all_stacks): Remove FIXME and WARN
	for i386.

2010-09-03  Ivan Maidanski <ivmai@mail.ru>

	* doc/README.macros (DARWIN_DONT_PARSE_STACK): Fix a typo.
	* darwin_stop_world.c (GC_use_mach_handler_thread): Change type
	to GC_bool.
	* darwin_stop_world.c (GC_suspend_thread_list, GC_start_world):
	Simplify the expressions involving GC_use_mach_handler_thread.
	* darwin_stop_world.c (GC_darwin_register_mach_handler_thread):
	Initialize GC_use_mach_handler_thread to TRUE (instead of 1).

2010-09-02  Ivan Maidanski <ivmai@mail.ru>

	* include/gc_pthread_redirects.h (GC_pthread_sigmask, GC_dlopen,
	pthread_sigmask, dlopen): Don't define for Win32 pthreads (and
	don't include signal.h and dlfcn.h).

2010-08-25  Ivan Maidanski <ivmai@mail.ru> (with help from Hans Boehm)

	* dyn_load.c (GC_register_dynlib_callback): Add FIXME.

2010-08-18  Ivan Maidanski <ivmai@mail.ru> (really Andreas Tobler)

	* include/private/gcconfig.h: Add support for FreeBSD on ppc64.

2010-08-18  Ivan Maidanski <ivmai@mail.ru> (with help from Andreas Tobler)

	* os_dep.c (PROTECT, UNPROTECT): Correct VM_PROT_EXEC to
	VM_PROT_EXECUTE.

2010-08-14  Ivan Maidanski <ivmai@mail.ru>

	* aclocal.m4: Regenerate (by autoreconf -vif using autoconf-2.67,
	automake-1.11.1 and libtool-2.2.8).
	* configure: Ditto.
	* ltmain.sh: Ditto.
	* Makefile.in: Ditto.
	* include/private/config.h.in: Ditto.
	* m4/libtool.m4: Ditto.
	* m4/ltoptions.m4: Ditto.
	* m4/ltversion.m4: Ditto.
	* m4/lt~obsolete.m4: Ditto.
